# programmiersprachen-raytracer

./: CMakeLists.txt  LICENSE  README.md
Aufgabe-5.8-tests/: test1.txt  test2.txt
framework/: box.cpp  box.hpp  material.cpp  material.hpp  ray.hpp  renderer.cpp  renderer.hpp  scene.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp
source/: raytracer.cpp
tests/: CMakeLists.txt  main.cpp  sdfloader.cpp
